platform/identity/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: identity
  labels:
    app: identity
spec:
  to:
    kind: Service
    name: identity-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
